Chore: Prevent overflow of bcs-comment-input

--- a/src/components/ContentSidebar/ActivityFeed/approval-comment-form/ApprovalCommentForm.scss
+++ b/src/components/ContentSidebar/ActivityFeed/approval-comment-form/ApprovalCommentForm.scss
@@ -14,6 +14,7 @@
         margin-top: 20px;
         max-height: 140px;
         width: auto;
+        overflow: hidden;
 
         .datalist-item {
             padding: 5px 35px 5px 15px;
